support sparkStreaming Sql